Bugfix/auto assign (#48)
* Auto Assign Room
Added the logic for auto assigning room occupancy
https://app.asana.com/0/1205472772784381/1205804857925443/f

* Increased the timeout

* Changed the logic for the modal option selecting

* Saved the variable in constant to have the expected result in all cases

* Added the logic for double occupancy

* Converted string to integer

* Code improvements, covering edge cases

* Removed unused variable

* Room Assignment: Removed the reset thingy that was appearing twice for no apparent reason :)

* Reseting the rooms occupancy when cicking on the minus and fixed wrong data room atributes

* Reset room occupants logic changes

* Checkout page: Increased the timeout on auto assign
Increase the timeout on private and roommate auto assigning
Asana Task: https://app.asana.com/0/1205472772784381/1205804857925443/f

* Checkout page: fix auto assign on step 2
Create a custom event 'occupant.popup.html.ready' to trigger on #addOccupantsModal when html is ready
Assana Task: https://app.asana.com/0/1205472772784381/1205804857925443/f

* Checkout page: fix auto assign on step 2
Fix not js error
Asana Task: https://app.asana.com/0/1205472772784381/1205804857925443/f

* Style room occupancy - checkout

---------

--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -15089,33 +15089,41 @@ nav .nav-tabs .nav-link.active {
   border-radius: 4px;
   box-shadow: none;
 }
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
+  .checkout-step-two-hotel__open-to-roommate, .checkout-step-two-hotel__private, .checkout-step-two-hotel__one-bed, .checkout-step-two-hotel__two-bed {
+    flex-direction: row;
+  }
   .checkout-step-two-hotel__assigned-occupants-list {
     order: 0;
   }
   .checkout-step-two-hotel__add-occupants-btn {
     order: 0;
   }
-  .checkout-step-two-hotel__one-bed, .checkout-step-two-hotel__two-bed, .checkout-step-two-hotel__open-to-roommate, .checkout-step-two-hotel__private {
-    align-items: center;
-    flex-direction: row;
+  .checkout-step-two-hotel__add-occupants {
+    width: 50%;
+    justify-content: end;
+    display: flex;
   }
   .checkout-step-two-hotel__room-type {
-    order: 0;
+    order: -1;
+    margin-bottom: 0;
   }
   .checkout-step-two-hotel__room-occupancy {
     width: 50%;
-    flex-grow: 1;
-    order: 0;
+    order: -1;
   }
   .checkout-step-two-hotel__edit-occupants {
-    order: 0;
+    display: flex;
+    width: 50%;
+    justify-content: end;
     margin-bottom: 0;
+    order: -1;
   }
   .checkout-step-two-hotel__room-quantity {
-    justify-content: flex-end;
-    order: 0;
     width: 50%;
+    justify-content: end;
+    gap: 15px;
+    order: -1;
   }
   .checkout-step-two-hotel__open-to-roommate .price, .checkout-step-two-hotel__open-to-roommate .refund-info, .checkout-step-two-hotel__private .price, .checkout-step-two-hotel__private .refund-info {
     width: 100%;
