--- a/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-hotel.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-hotel.scss
@@ -110,8 +110,11 @@
             }
         }
     }
-
-    @include media-breakpoint-up(lg) {
+     @include media-breakpoint-up(xl) {
+        &__open-to-roommate,
+        &__private, &__one-bed, &__two-bed {
+            flex-direction: row;
+        }
         &__assigned-occupants-list{            
             order: 0;
         }
@@ -119,26 +122,31 @@
             order: 0;
         }
 
-        &__one-bed, &__two-bed, &__open-to-roommate, &__private{            
-            align-items: center;
-            flex-direction: row; 
-        }               
+        &__add-occupants {
+            width: 50%;
+            justify-content: end;
+            display: flex;
+        }            
             &__room-type{                
-                order: 0;                   
+                order: -1; 
+                margin-bottom: 0;               
             }
             &__room-occupancy{
                 width: 50%;
-                flex-grow: 1;
-                order: 0;
+                order: -1;
             }
             &__edit-occupants{                
-                order: 0;
-                margin-bottom: 0;                    
+                display: flex;
+                width: 50%;
+                justify-content: end;
+                margin-bottom: 0;   
+                order: -1;               
             }
             &__room-quantity{                
-                justify-content: flex-end;
-                order: 0;
                 width: 50%;
+                justify-content: end;
+                gap: 15px;
+                order: -1;
             }
         
         &__open-to-roommate, &__private{        
